--- a/client-myjss/src/app/modules/quotation/components/quotation-file-uploader/quotation-file-uploader.component.html
+++ b/client-myjss/src/app/modules/quotation/components/quotation-file-uploader/quotation-file-uploader.component.html
@@ -2,10 +2,14 @@
   <div class="col-12 col-md-6">
     <div class="card h-100 d-flex flex-column justify-content-between p-3">
       <div>
-        <ul>
+        <ul class="mb-0">
           <li>
             {{ entity.typeDocument.customLabel ? entity.typeDocument.customLabel:
             entity.typeDocument.label }} {{ entity.isMandatory ? '*':''}}
+            <button type="button" class="ms-3 btn btn-outline-secondary btn-sm"
+              *ngIf="entity.typeDocument.attachments && entity.typeDocument.attachments[0]"
+              (click)="downloadAttachment(entity.typeDocument.attachments[0])">Télécharger
+              le modèle</button>
           </li>
         </ul>
       </div>
