--- a/client-jss/src/app/main/components/header/header.component.html
+++ b/client-jss/src/app/main/components/header/header.component.html
@@ -259,7 +259,7 @@
                     [alt]="post.text.media.alt_text" class="w-100"></a>
               </div>
             </div>
-            <div data-aos="fade-in" class="card-body d-flex flex-column flex-lg-row align-items-stretch p-0">
+            <div data-aos="fade-in" class="ms-3 card-body d-flex flex-column flex-lg-row align-items-stretch p-0">
               <div class="order-0 order-lg-1">
                 <div class="row align-items-center ms-0 mb-1"
                   *ngIf="post.text.jssCategories && post.text.jssCategories.length>0">
