implement new text for webinar

--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -22,7 +22,10 @@
             </path>
           </svg>
         </div>
-        <h2 class="h2 pe-xxl-5 me-xl-4 mb-md-0 text-white">Ne manquez pas notre prochain webinaire le 24 mars à 13h00
+        <h2 class="h2 pe-xxl-5 me-xl-4 mb-md-0 text-white">
+          Inscrivez-vous à notre prochain webinaire
+          <span style="color: #CEB793;">Confidentialité des données</span> <br>
+          le 26 septembre à 09h30
         </h2>
       </div>
 
