--- a/client-myjss/src/app/modules/my-account/components/affaires/affaires.component.css
+++ b/client-myjss/src/app/modules/my-account/components/affaires/affaires.component.css
@@ -5,3 +5,11 @@
 .border-top {
   border-radius: 0px !important;
 }
+
+.hover-bg-light {
+  background-color: var(--ar-gray-300);
+}
+
+.hover-bg-light:hover {
+  background-color: inherit;
+}
