fix template webinar

--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -121,26 +121,18 @@
     <div class="tab-pane fade show active" id="dayOne" role="tabpanel">
       <div class="row py-3 my-2 my-md-3">
         <div class="col-md-3">
-          <div class="h6 mb-2 mb-md-0">9:30 - 9:35</div>
+          <div class="h6 mb-2 mb-md-0">9:30 - 9:40</div>
         </div>
         <div class="col-md-6">
-          <h3 class="h4 mb-0">Introduction : Le circuit des formalités</h3>
-          <p class="pt-2 pt-md-3 mb-md-0">Présentation du Guichet Unique, son fonctionnement et son impact sur les
-            formalités des entreprises.</p>
+          <h3 class="h4 mb-0">Introduction </h3>
+          <p class="pt-2 pt-md-3 mb-md-0">Tour d’horizon des dernières actualités juridiques liées aux formalités
+            d’entreprise.</p>
         </div>
         <div class="col-md-3 text-md-end">
           <div class="d-inline-flex">
             <div class="bg-light flex-shrink-0 rounded-circle position-relative z-4" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/05.jpg" width="48" alt="Avatar">
-            </div>
-            <div class="bg-light flex-shrink-0 rounded-circle position-relative z-3 ms-n3" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/08.jpg" width="48" alt="Avatar">
-            </div>
-            <div class="bg-light flex-shrink-0 rounded-circle position-relative z-2 ms-n3" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/09.jpg" width="48" alt="Avatar">
-            </div>
-            <div class="bg-light flex-shrink-0 rounded-circle position-relative z-1 ms-n3" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/12.jpg" width="48" alt="Avatar">
+              <img class="rounded-circle" src="assets/img/societe/team/direction/myriam_presidente.jpg" width="48"
+                alt="Avatar">
             </div>
           </div>
         </div>
@@ -148,20 +140,18 @@
       <hr>
       <div class="row py-3 my-2 my-md-3">
         <div class="col-md-3">
-          <div class="h6 mb-2 mb-md-0">9:30 - 10:00</div>
+          <div class="h6 mb-2 mb-md-0">9:40 - 10:00</div>
         </div>
         <div class="col-md-6">
-          <h3 class="h4 mb-0">Points d'actualités</h3>
-          <p class="pt-2 pt-md-3 mb-md-0">Tour d’horizon de toutes les dernières actualités juridiques liées au Guichet
-            Unique et point de situation global.</p>
+          <h3 class="h4 mb-0">Anonymisation des données personnelles</h3>
+          <p class="pt-2 pt-md-3 mb-md-0">Dernières informations sur la confidentialité des informations personnelles
+            sur le Kbis, la fiche RNE et autres actes déposés. Qui est concerné ? Comment faire ? Quelles pièces ?</p>
         </div>
         <div class="col-md-3 text-md-end">
           <div class="d-inline-flex">
             <div class="bg-light flex-shrink-0 rounded-circle position-relative z-4" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/10.jpg" width="48" alt="Avatar">
-            </div>
-            <div class="bg-light flex-shrink-0 rounded-circle position-relative z-3 ms-n3" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/06.jpg" width="48" alt="Avatar">
+              <img class="rounded-circle" src="assets/img/societe/team/direction/myriam_presidente.jpg" width="48"
+                alt="Avatar">
             </div>
           </div>
         </div>
@@ -178,7 +168,8 @@
         <div class="col-md-3 text-md-end">
           <div class="d-inline-flex">
             <div class="bg-light flex-shrink-0 rounded-circle position-relative z-4" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/19.jpg" width="48" alt="Avatar">
+              <img class="rounded-circle" src="assets/img/societe/team/direction/myriam_presidente.jpg" width="48"
+                alt="Avatar">
             </div>
           </div>
         </div>
@@ -189,20 +180,15 @@
           <div class="h6 mb-2 mb-md-0">10:15 - 10:30</div>
         </div>
         <div class="col-md-6">
-          <h3 class="h4 mb-0">Questions/réponses avec nos experts</h3>
+          <h3 class="h4 mb-0">Questions/réponses avec notre experte</h3>
           <p class="pt-2 pt-md-3 mb-md-0">Échanges en direct pour répondre aux interrogations des participants et
             clarifier les points essentiels.</p>
         </div>
         <div class="col-md-3 text-md-end">
           <div class="d-inline-flex">
             <div class="bg-light flex-shrink-0 rounded-circle position-relative z-4" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/08.jpg" width="48" alt="Avatar">
-            </div>
-            <div class="bg-light flex-shrink-0 rounded-circle position-relative z-3 ms-n3" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/06.jpg" width="48" alt="Avatar">
-            </div>
-            <div class="bg-light flex-shrink-0 rounded-circle position-relative z-2 ms-n3" style="padding: 3px;">
-              <img class="rounded-circle" src="assets/img/avatar/09.jpg" width="48" alt="Avatar">
+              <img class="rounded-circle" src="assets/img/societe/team/direction/myriam_presidente.jpg" width="48"
+                alt="Avatar">
             </div>
           </div>
         </div>
@@ -211,25 +197,18 @@
   </div>
 </section>
 
-<section class="container py-5 my-5">
-  <div class="card text-center dark-blue-dropdown py-5">
-    <div class="row">
-      <div class="col-md-8 m-auto">
-        <h2 class="text-white">Visionnez le dernier webinaire en replay et ne manquez aucune des nouveautés !</h2>
-      </div>
+<section class="container">
+  <div class="container yellow-card my-2 my-md-3 my-xl-4 pb-2 rounded-5 overflow-hidden p-md-5 p-4">
+    <div class="row justify-content-center gy-md-5 gy-4 gx-xl-5 p-4">
+      <h1 class="h2 text-center text-secondary">Inscrivez-vous pour recevoir les invitations aux prochains webinaires
+      </h1>
     </div>
-    <div class="row justify-content-center">
-      <div class="col-md-6 col-12 align-items-center">
-        <div class="input-group input-group-border text-white align-items-center py-1 mt-5 rounded-1 d-flex">
-          <div class="col">
-            <div class="row align-items-center me-1">
-              <generic-input style="flex-grow: 1;" label="E-mail" [form]="webinarsForm" propertyName="email"
-                [(model)]="replayMail" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false" class="col"
-                type="email" [icon]="'mail'"></generic-input>
-
-              <button class="btn btn-primary col-4" type="button" (click)="sendReplay()">Voir le replay</button>
-            </div>
-          </div>
+    <div class="row justify-content-center mb-4 mb-md-2 gy-md-5 gy-4 gx-xl-5">
+      <div class="col-lg-6 mt-2 mt-sm-4">
+        <div class="input-group">
+          <label class="form-label fs-base" for="email"></label>
+          <input class="form-control " type="email" placeholder="E-mail" [(ngModel)]="replayMail" required id="email">
+          <button class="btn btn-secondary" type="button" (click)="sendReplay()">S'inscrire</button>
         </div>
       </div>
     </div>
