fix rollback old text to subscribe replay

--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -200,7 +200,8 @@
 <section class="container">
   <div class="container yellow-card my-2 my-md-3 my-xl-4 pb-2 rounded-5 overflow-hidden p-md-5 p-4">
     <div class="row justify-content-center gy-md-5 gy-4 gx-xl-5 p-4">
-      <h1 class="h2 text-center text-secondary">Inscrivez-vous pour recevoir les invitations aux prochains webinaires
+      <h1 class="h2 text-center text-secondary">Visionnez le dernier webinaire en replay et ne manquez aucune des
+        nouveautés !
       </h1>
     </div>
     <div class="row justify-content-center mb-4 mb-md-2 gy-md-5 gy-4 gx-xl-5">
@@ -208,7 +209,7 @@
         <div class="input-group">
           <label class="form-label fs-base" for="email"></label>
           <input class="form-control " type="email" placeholder="E-mail" [(ngModel)]="replayMail" required id="email">
-          <button class="btn btn-secondary" type="button" (click)="sendReplay()">S'inscrire</button>
+          <button class="btn btn-secondary" type="button" (click)="sendReplay()">Voir le replay</button>
         </div>
       </div>
     </div>
