--- a/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
+++ b/client-myjss/src/app/modules/quotation/components/services-selection/services-selection.component.html
@@ -59,11 +59,11 @@
       </p>
     </div>
 
-    <ul ngbNav #nav="ngbNav" [activeId]="0" class="nav-tabs ">
+    <ul ngbNav #nav="ngbNav" [destroyOnHide]="false" [activeId]="0" class="nav-tabs ">
       <ng-container *ngIf="serviceFamilies">
         <ng-container *ngFor="let serviceFamily of serviceFamilies;let serviceFamilyIndex=index">
           <li [ngbNavItem]="serviceFamilyIndex" class="nav-item "
-            *ngIf="quotation && selectedAssoIndex!=null && quotation.assoAffaireOrders[selectedAssoIndex].affaire.siret!=null || hasServiceForUnregisteredAffaire(serviceFamily) ">
+            *ngIf="quotation && selectedAssoIndex!=null && shouldDisplayServiceFamily(serviceFamily, quotation.assoAffaireOrders[selectedAssoIndex])">
             <button class="nav-link quotation-tabs" ngbNavLink (click)="selecteServiceFamily(serviceFamily)"> <i
                 class="{{serviceFamily.myJssIcon}} me-2"></i>{{serviceFamily.customLabel}}</button>
             <ng-template ngbNavContent *ngIf="selectedServiceFamily">
