--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -3,7 +3,7 @@
     <div class="row justify-content-between">
       <div class="col-lg-7">
         <!-- Connexion -->
-        <div class="row" *ngIf="!currentUser && !isLinkSent">
+        <div class="row" *ngIf="!currentUser && !isLinkSent && false">
           <div class="card mb-4 bg-secondary-subtle">
             <div class="row">
               <div class="col-lg-4 ps-0">
