--- a/client/src/app/modules/profile/components/my-profil/my-profil.component.html
+++ b/client/src/app/modules/profile/components/my-profil/my-profil.component.html
@@ -25,7 +25,8 @@
           </td>
         </tr>
       </table>
-      <table class="full-width" *ngIf="adSales && currentEmployee.adPath.indexOf(adSales.activeDirectoryPath)>=0">
+      <table class="full-width"
+        *ngIf="adSales && currentEmployee.adPath.indexOf(adSales.activeDirectoryPath)>=0 || adDirection  && currentEmployee.adPath.indexOf(adDirection.activeDirectoryPath)>=0">
         <tr>
           <td>
             <generic-input [(model)]="currentEmployee.bookingPageUrl" label="URL vers ma page de rendez-vous"
