--- a/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
+++ b/client-myjss/src/app/modules/my-account/components/overview/overview.component.html
@@ -153,9 +153,8 @@
             </tbody>
           </table>
         </div>
-        <div class="center-block" *ngIf="currentUser.salesEmployee.bookingPageUrl">
-          <iframe class="pt-4" [src]="currentUser.salesEmployee.bookingPageUrl" width="100%" height="2300px"
-            frameborder="0">
+        <div class="center-block" *ngIf="appointmentUrl">
+          <iframe class="pt-4" [src]="appointmentUrl" width="100%" height="2300px" frameborder="0">
           </iframe>
         </div>
       </div>
