--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -212,7 +212,7 @@
                 <div class="col-md-12">
                   <div class="section-title-block d-flex">
                     <h3>Podcast</h3>
-                    <a href="category.html" class="text-uppercase section-title-link">
+                    <a routerLink="/podcasts" class="text-uppercase section-title-link">
                       Voir tout
                       <svg width="24" height="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                         <path
