--- a/client-jss/src/app/main/components/post/post.component.html
+++ b/client-jss/src/app/main/components/post/post.component.html
@@ -263,10 +263,10 @@
                 <!-- Comments -->
                 <hr>
                 <div class="" id="comments">
-                  <h2 class="h3 py-lg-1 py-xl-3" *ngIf="!commentsPagination.totalElements">0 Commentaire </h2>
-                  <h2 class="h3 py-lg-1 py-xl-3" *ngIf="commentsPagination.totalElements">
+                  <p class="h3 py-lg-1 py-xl-3" *ngIf="!commentsPagination.totalElements">0 Commentaire </p>
+                  <p class="h3 py-lg-1 py-xl-3" *ngIf="commentsPagination.totalElements">
                     {{commentsPagination.totalElements <= 1 ? commentsPagination.totalElements + " Commentaire" :
-                      commentsPagination.totalElements + " Commentaires" }} </h2>
+                      commentsPagination.totalElements + " Commentaires" }} </p>
                       <div class="" *ngIf="commentsPagination.totalElements!=0">
                         <hr>
                         <!-- Comment -->
@@ -334,8 +334,8 @@
                         class="card border-2 pt-2 p-md-2 p-xl-3 p-xxl-4 mt-5 mt-md-0 mb-4">
                         <div class="card-body">
                           <div class="row justify-content-between align-items-center">
-                            <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="!newCommentParent.id">Laisser un commentaire
-                            </h2>
+                            <p class="h2 col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="!newCommentParent.id">Laisser un commentaire
+                            </p>
                             <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="newCommentParent.id">Répondre à
                               {{newCommentParent.authorFirstName}} {{newCommentParent.authorLastNameInitials}}.</h2>
                             <div class=" col-4 d-inline-flex justify-content-end pb-2 pb-lg-3 pb-xl-4"
@@ -378,8 +378,8 @@
                         class="card border-2 pt-2 p-md-2 p-xl-3 p-xxl-4 mt-5 mt-md-0 mb-4">
                         <div class="card-body">
                           <div class="row justify-content-between align-items-center">
-                            <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="!newCommentParent.id">Laisser un commentaire
-                            </h2>
+                            <p class="h2 col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="!newCommentParent.id">Laisser un commentaire
+                            </p>
                             <h2 class="col-8 pb-2 pb-lg-3 pb-xl-4" *ngIf="newCommentParent.id">Répondre à
                               {{newCommentParent.authorFirstName}} {{newCommentParent.authorLastNameInitials}}.</h2>
                             <div class=" col-4 d-inline-flex justify-content-end pb-2 pb-lg-3 pb-xl-4"
